# londo

./: .env.example  .gitignore  README.md  pyproject.toml  schema.sql
.github/workflows/: pages.yml  scrape.yml
londo/: dedupe.py  enrich.py  geo.py  links.py  models.py  output.py  runner.py  storage.py  whatsapp.py
londo/scrapers/: base.py  dandelion.py  eventbrite.py  luma.py  meetup.py  momence.py  newspeak.py  psycalendar.py  seeds.py  studysociety.py  submissions.py
migrations/: 2026-06-12_enrichment_and_submissions.sql  2026-06-12_submissions_unique_url.sql  2026-06-12_topics.sql
scripts/: backfill_topics.py  build_site.py  gen_splash.py  preview.py
sites/psyconnect/: config.js  index.html  manifest.webmanifest  theme.css
web/: app.js  config.js  index.html  manifest.webmanifest  styles.css  sw.js
